--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -6,7 +6,7 @@
 <div fxLayoutAlign="center">
   <mat-card class="mat-elevation-z6">
 
-    <h1>Login</h1>
+    <h1>Login1</h1>
 
     <div class="error" *ngIf="error">{{error}}</div>
 
@@ -18,6 +18,7 @@
                [formControl]="emailControl"
                (focus)="this.error=null"
                matInput placeholder=""
+               [email]="true"
                aria-label="Text field for the login email">
         <mat-error *ngIf="emailControl.invalid" translate>MANDATORY_EMAIL</mat-error>
       </mat-form-field>
